--- a/style.css
+++ b/style.css
@@ -5,10 +5,11 @@
 }
 
 html{
-    /*font-size: 100%;*/
     font-size: 100%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
+/*--------------------------------------------------------Body----------------------------------------------------------------*/
 body{
     font-size: 1.1rem;
     background-color: #e6e6e6;
@@ -18,6 +19,8 @@ a{
     text-decoration: none;
 }
 
+
+/*----------------------------------------------------Header ------------------------------------------------------------*/
 header{
     /*background-color: #5da8b3;*/
     background-color: #bc815f;
@@ -66,19 +69,20 @@ li:last-child{
     margin-right: 0;
 }
 
-li a, li a:visited{
+header a{
     text-decoration: none;
     color: #e6e6e6;
     display: block;
-    padding-left: 0.7rem;
-    padding-right: 0.7rem;
+    width:10ch;
+    text-align: center;
+    /* padding-left: 0.7rem;
+    padding-right: 0.7rem; */
     line-height: 4rem;
 }
 
-header a:hover, a:focus{
+header a:visited, header a:hover, header a:active{
     background-color: #5d3d30;
     color: white;
-    font-size: 1.2rem;
        
 }
 
@@ -90,13 +94,12 @@ header li:hover{
 .current-nav{
     color: white; 
     background-color: #5d3d30;
-    font-size: 1.2rem
 }
 
-a:hover{
-    color:#5d3d30;
-}
-main{
+
+/*--------------------------------------------------------Header(end)------------------------------------------------------------*/
+/*-------------------------------------------------------Home-Page------------------------------------------------------------*/
+.home-main{
     margin-top: 5%;
 }
 
@@ -109,50 +112,82 @@ main div{
 
 }
 
-main figure{
-    margin-top: 2px;
+.home-main{
+    margin-top: 5%;
+
+    
+}
+
+.home-section{
+    display: inline-block;
+    float:left;
+    width: 55%;
+    text-align: center;
+}
+
+.home-figure{
+    display: block;
+    width:45%;
+    float:right;
+    position: relative;
+
+}
+
+.home-pic{
+    width: 50vmax;
+    height: 50vmax;
+    position: relative;
+    right: 10%;
     
 }
 
 
-.home-pic{
-    width: 43vmax;
-    height: 43vmax;
-}
-
 .center-Fenn{
     color: #b30000;
     font-family:'chalkduster', fantasy;
-    font-size: 3.4vmax;
+    font-size: 3vmax;
     font-weight: bolder;
-    text-align: center;
-    width: 40vmax;
-    heigh: 40vmax;
-    margin-left: 17%;
-    /*margin-top: 15%;*/
-    transform: rotate(-15deg);
+    margin-top: 10vmin;
+    position: relative;
+    left: 20px;
+
 
 }
 
-p.center-Fenn:hover{
+.home-slogan{
+    font-size: 2vmax;
+    font-style: italic;
+    color: gray;
+    margin-top: 3vmin;
+    position: relative;
+    left: 20px;
+
+}
+
+p.home-slogan:hover{
+    color:#006b3e;
+
+}
+
+/* p.center-Fenn:hover{
     color: #EED88B;
-}
+} */
 
 .center-Construction{
     color: #b30000;
-    font-size: 3.4vmax;
+    font-size: 3vmax;
     font-family:'chalkduster', fantasy;
     font-weight: bolder;
-    text-align: center;
-    margin-left: 33%;
-    margin-top: 0.7rem;
-    transform: rotate(-15deg);
+    position: relative;
+    left: 20px;
+
 }
 
 p.center-Construction:hover{  
     color:#006b3e;
     
 }
+
 
 ol{
     list-style-type:none;
@@ -200,8 +235,350 @@ margin-left: 20%;
     display: inline;
     text-align: right;
 }
+*/
 
+/*------------------------------------------------Service Page ------------------------------------------------------------*/
+.text-center{
+text-align: center;
+
+}
+
+
+
+.service-left-image{
+    display: inline-block;
+    width:25vmax;
+    height:25vmax;
+    margin-left:3%;
+
+}
+
+.service-right-paragraph{
+    display: inline;
+    margin-top: 2%;
+    float: right;
+    margin-right: 20%;
+
+}
+
+.service-caption-left{
+    margin-left: 3%;
+}
+
+.service-caption-color{
+    color:#7d4727;
+
+}
+
+.light-brown{
+    background-color: #CAD5E3;
+}
+
+.service-title{
+    text-align: center;
+    margin-top: 2%;
+
+}
+
+.service-right-image{
+    display: inline;
+    width:25vmax;
+    height:25vmax;
+    margin-left:6.2%;
+
+
+}
+
+.service-caption-right{
+    text-align: right;
+    margin-right: 23.5%;
+    
+
+}
+
+
+
+.service-left-paragraph{
+    display: inline;
+    margin-top: 2%;
+    float: left;
+    width: 65%;
+    position: relative;
+    left:15%
+
+
+}
+
+p.service-left-paragraph a, p.service-right-paragraph a{
+    color:#006b3e;
+}
+/* ----------------------------------------------Service Page (end)----------------------------------------------------------*/
+
+/* --------------------------------------------------Floor Gallery----------------------------------------------------------*/
+
+.floor-center{
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+    border-bottom: solid gray;
+}
+
+.floor-pics-center{
+    margin: auto;
+    width: 95%;
+}
+.previous-left{
+    display:inline-block;
+    width:50%;
+    float: left;
+    color: #b30000;
+}
+
+.next-right{
+    display: block;
+    width:50%;
+    float: right;
+    text-align: right;
+    color:#b30000;
+   
+}
+
+.previous-left-last{
+    color: #b30000;
+}
+
+a.next-right:hover{
+    color: #b30000;
+    opacity: 0.6;
+}
+
+a.previous-left:hover{
+    color: #b30000;
+    opacity: 0.6;
+}
+
+a.previous-left-last:hover{
+    color: #b30000;
+    opacity: 0.6;
+}
+
+
+/* ------------------------------------------------Floor Gallery(end)----------------------------------------------------------*/
+
+
+/* ---------------------------------------------------About US---------------------------------------------------------------*/
+.typography-old-title{
+    font-family: Georgia, serif;
+    text-align: center;
+}
+
+h2.typography-old-title{
+    margin-top: 5%;
+}
+
+.about-figure{
+    display: inline;
+    width:40%;
+}
+
+.about-pic{
+    display: inline;
+    border: 4px #bc815f solid;
+    width:20vmax;
+    height:23vmax;
+    position: relative;
+    left:20%;
+    margin-top: 7%;
+}
+
+
+.about-text{
+    display: inline-block;
+    max-width: 43%;
+    float:right;
+    position:relative;
+    right:14%;
+    bottom:2%;
+    padding: 4% 4%;
+    border: 5px #287ab8 solid;
+    margin-top: 2%;
+    font-size: 1.2rem;
+
+}
+
+p.about-text a{
+    color:#006b3e;
+}
+
+.about-figure-review-1{
+    display: inline-block;
+    width:25%;
+    position: relative;
+    left: 5%;
+    margin: 2%;
+    opacity: 0.8;
+    vertical-align: top;
+}
+.about-review-pic1{
+    display: flex;
+    justify-content: center;
+    border-radius: 50%;
+    margin:auto;
+}
+
+figure.about-figure-review-1:hover{
+    opacity: 1;
+    color:#b30000;
+    font-weight: bold;
+}
+
+.review-caption{
+    text-align: center;
+    font-family: "Apple Chancery", cursive;
+}
+
+.review-see-more{
+    text-align: right;
+    position: relative;
+    right: 10%;
+}
+
+p.review-see-more a{
+    color:#7d4727;
+}
+
+p.review-see-more a:hover{
+    cursor: pointer;
+    color:#b30000;
+}
+/* .about-main{
+    height: 40vmax;
+} */
+
+/* --------------------------------------------------About US (end)-----------------------------------------------------------*/
+
+/* -----------------------------------------------------Contact---------------------------------------------------------------*/
+.contact-main{
+    margin-top: 5%;
+}
+
+.contact-fieldset{
+    width:80%;
+    margin:auto;
+    margin-bottom: 5%;
+}
+
+.contact-form{
+    display: inline-block;
+    float:left;
+    width: 50%;
+    height: 25.5rem;
+    background-color: #287ab8;
+    /* background-color: #4169e1; */
+    color: #e6e6e6;
+    
+}
+
+.contact-input{
+    width:30ch;
+    display: block;
+    margin:auto;
+    margin-bottom: 2%;
+}
+
+input.contact-input:focus{
+    background-color: #C1E1C1;
+}
+
+textarea.contact-area:focus{
+    background-color: #C1E1C1;
+}
+
+.contact-legend{
+    text-align: center;
+    width: auto;
+}
+
+.contact-center{
+    text-align: center;
+}
+
+.contact-subject{
+    width: auto;
+    display: block;
+    margin: auto;
+    margin-bottom: 2%;
+}
+
+.contact-area{
+    display: block;
+    margin: auto;
+    margin-bottom: 1%;
+}
+
+.contact-p-button{
+    text-align: center;
+    position: relative;
+    right: 22%;
+}
+.contact-button{
+    display: inline-block;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    padding-left: 2.2px;
+    padding-right: 2.2px;
+    margin-right: 2px;
+    margin-bottom: 5%;
+}
+
+.contact-ul{
+    text-align: center;
+    display: inline-block;
+    padding-top: 3rem;
+    padding-bottom: 6.2rem;
+    font-size: larger;
+    font-weight: bold;
+    width: 50%;
+    float: right;
+    background: #e2d8cc;
+}
+
+ul.contact-ul li{
+    line-height: 4.1rem;
+}
+
+ul.contact-ul a{
+    display: contents;
+    color:#7d4727;
+}
+
+ul.contact-ul a:hover{
+    color:#b30000;
+}
+
+.contact-days{
+    margin: auto;
+    font-weight: bold;
+    text-align: center;
+    font-size: larger;
+
+}
+
+.contact-hours{
+    margin-top: 10%;
+    margin: auto;
+    font-weight: bold;
+    color: #b30000;
+    text-align: center;
+    margin-bottom: 5%;
+    font-size: larger;
+
+}
+/* ----------------------------------------------------Contact(end)----------- ----------------------------------------------*/
+/* -------------------------------------------------------Footer-------------------------------------------------------------*/
 footer{
+    display: block;
     height: 15rem;
     background: #52392F;
     /*background-color: #7e533f;*/
@@ -238,18 +615,16 @@ footer h4:nth-child(2){
     display: inline-block;
     width: 50%;
     float: left;
-    margin-top:1.2%;
     margin-right: 0;
     position: relative;
+    top:13%;
     left:10%;
-    /* margin-inline-start: 0;
-    margin-inline-end: -100px;
-    margin-block-end: 0;
-    writing-mode: horizontal-tb; */
 } 
 
-footer ul:nth-child(2){
+.footer-ul2{
     display: inline;
+    position: relative;
+    margin-top: 50px;
 }
 footer li{
     display: inline;
@@ -276,9 +651,9 @@ footer li:first-child{
     width: 50%;
     font-size: medium;
     float: left;
-    margin-top: 1%;
+    margin-top: 50px;
+    margin-left: 10px;
     position: relative;
-    right:45%;
     top:5%;
 
 }
@@ -298,20 +673,35 @@ footer a{
 
 footer a:hover{
     color:#B4D9EF;
-    font-size: 1.2rem;
 
+}
+
+footer input[type=email]{
+    width: 30ch;
+    margin-bottom: 1px;
 }
 
 footer input[type=email]:focus{
-    background-color: #B4D9EF;
+    /* background-color: #B4D9EF; */
+    background-color: #C1E1C1;
 
 }
-
-footer textarea:focus{
-    background-color: #B4D9EF;
-} 
 
 footer button{
     padding-left: 10px;
     padding-right: 10px;
 }
+
+footer button:hover{
+    cursor: pointer;
+    padding-top: 2px;
+    padding-bottom: 2px;
+}
+
+footer textarea:focus{
+    /* background-color: #B4D9EF; */
+    background-color: #C1E1C1;
+} 
+
+/* -----------------------------------------------------Footer(end)-----------------------------------------------------------*/
+
